@@ -31,6 +31,6 @@ using System.Runtime.InteropServices;
 //
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
-// [assembly: AssemblyVersion("1.15.10.5724*")]
-[assembly: AssemblyVersion("1.15.10.5724")]
-[assembly: AssemblyFileVersion("1.15.10.5724")]
+// [assembly: AssemblyVersion("1.15.11.5732*")]
+[assembly: AssemblyVersion("1.15.11.5732")]
+[assembly: AssemblyFileVersion("1.15.11.5732")]
