@@ -1,4 +1,4 @@
-pathway (1.15.8.5724)  experimental; urgency=high
+pathway (1.15.11.5732)  experimental; urgency=high
 
   * Common:TD-4758 Enable hyphenation for Scripture.
   * Common:TD-4780 Spaces in username leads to problems
@@ -11,7 +11,6 @@ pathway (1.15.8.5724)  experimental; urgency=high
   * Epub/HTML5:TD-4793 HTML5 add simple search
   * Epub/HTML5:Make a separate cross-platform option for HTML5
   * General:TD-4681 Handle audio writing system export
-  * General:TD-4721 Formatting via pathway is not following flex
   * General:TD-4744 Validation errors appear while exporting
   * General:TD-4770 Fix when xhtml has insignificant line breaks
   * General:TD-4775 Pass Paratext database name to PathwayExport
@@ -28,6 +27,7 @@ pathway (1.15.8.5724)  experimental; urgency=high
   * LO/OO:TD-4301 Space after footnote marker before period
   * LO/OO:TD-4396 Pathway justify not working on minor entries
   * LO/OO:TD-4708 headword not bold
+  * LO/OO:TD-4721 Formatting via pathway is not following flex
   * LO/OO:TD-4739 MinorEntryVariant Color override and extra padding removed
   * LO/OO:TD-4740 Extended Note data content is not appear
   * LO/OO:TD-4741 Base font size
@@ -41,6 +41,7 @@ pathway (1.15.8.5724)  experimental; urgency=high
   * LO/OO:TD-4383 The option to split files fails to produce a LibreOffice file
   * LO/OO:TD-4519 Ask about running macro 2nd time
   * LO/OO:TD-4719 Characters and colors changed
+  * LO/OO:Change to Mexico 6x8.5 page
   * Paratext:TD-4005 error of my version of Paratext is not supported
   * Paratext:TD-4506 Font Features from Paratext
   * Paratext:TD-4512 Marker rq missing
@@ -53,6 +54,7 @@ pathway (1.15.8.5724)  experimental; urgency=high
   * Parser:TD-4805 Make sure write to CSS completes and objects are released.
   * Smart:TD-4806 Extra material in reference list
   * Stylesheet:TD-4757 Right aligned Scripture quote reference
+  * Stylesheet:TD-4801 Fix mt2 mt1 is1 styles
   * Stylesheet:Apply justification to variant and complex minor entries
   * UI:TD-4045 Text merging happens when I set the Font size ‘0’ ...
   * UI:TD-4737 Running Header, Reference Format did not save
